# ifc_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
ifc_rs/: Cargo.toml
ifc_rs/examples/: builder.rs  builder_example.ifc  building.rs  building_example.ifc  extractor.rs  roof.rs
ifc_rs/src/: ifc_type.rs  lib.rs  prelude.rs
ifc_rs/src/geometry/: dimension_count.rs  extruded_area_solid.rs  geometric_projection.rs  mod.rs  non_uniform_transformations.rs  prelude.rs  transform_base.rs  transformations.rs  uniform_transformations.rs
ifc_rs/src/geometry/arbitrary_closed_profile_def/: deserialize.rs  mod.rs
ifc_rs/src/geometry/axis/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/geometry/direction/: deserialize.rs  mod.rs
ifc_rs/src/geometry/indexed_poly_curve/: mod.rs
ifc_rs/src/geometry/local_placement/: mod.rs
ifc_rs/src/geometry/point/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/geometry/point_list/: mod.rs  serialize.rs
ifc_rs/src/geometry/polyline/: deserialize.rs  mod.rs
ifc_rs/src/geometry/product_definition_shape/: deserialize.rs  mod.rs
ifc_rs/src/geometry/rectangle_profile_def/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/geometry/representation_context/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/geometry/representation_subcontext/: deserialize.rs  mod.rs
ifc_rs/src/geometry/shape_representation/: deserialize.rs  mod.rs  repr_identifier.rs  repr_type.rs
ifc_rs/src/id/: id_or.rs  ifc_uuid.rs  mod.rs  plain.rs  typed.rs
ifc_rs/src/ifc_builder/: building.rs  materials.rs  mod.rs  openings.rs  prelude.rs  project.rs  properties.rs  roofs.rs  shading_devices.rs  site.rs  slabs.rs  spaces.rs  storey.rs  transforms.rs  walls.rs  windows.rs
ifc_rs/src/ifc_extractor/: mod.rs  prelude.rs
ifc_rs/src/materials/: material.rs  material_constituent.rs  material_constituent_set.rs  material_layer.rs  material_layer_set.rs  material_layer_set_usage.rs  mod.rs
ifc_rs/src/meta/: mod.rs
ifc_rs/src/meta/datamap/: deserialize.rs  mod.rs
ifc_rs/src/meta/footer/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/meta/header/: deserialize.rs  mod.rs
ifc_rs/src/objects/: building.rs  mod.rs  prelude.rs  project.rs  shading_device.rs  shading_device_type.rs  shading_device_type_enum.rs  site.rs  storey.rs
ifc_rs/src/objects/actor_role/: deserialize.rs  mod.rs
ifc_rs/src/objects/address/: deserialize.rs  mod.rs
ifc_rs/src/objects/application/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/objects/door/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/objects/doortype/: deserialize.rs  door_operation_type_enum.rs  door_type_enum.rs  mod.rs  serialize.rs
ifc_rs/src/objects/opening_element/: deserialize.rs  mod.rs  opening_element_type_enum.rs  serialize.rs
ifc_rs/src/objects/organization/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/objects/owner_history/: mod.rs
ifc_rs/src/objects/person/: mod.rs  serialize.rs
ifc_rs/src/objects/person_and_org/: mod.rs  serialize.rs
ifc_rs/src/objects/roof/: deserialize.rs  mod.rs  serialize.rs
ifc_rs/src/objects/rooftype/: deserialize.rs  mod.rs
ifc_rs/src/objects/shared/: context.rs  element.rs  mod.rs  (+9 more)
ifc_rs/src/parser/: bool.rs  dummy.rs  geometry.rs  ifc_float.rs  integer.rs  label.rs  list.rs  mod.rs  real.rs  string.rs  value.rs
ifc_rs/src/properties/: base.rs  extended_base.rs  material.rs  mod.rs  prelude.rs  set.rs  single_value.rs
ifc_rs/src/relations/: mapped_item.rs  mod.rs  prelude.rs  rel_aggregates.rs  rel_associates_material.rs  rel_contained_in_spatial_structure.rs  rel_declares.rs  rel_defines_by_properties.rs  rel_defines_by_type.rs  rel_fills_element.rs  rel_voids_element.rs  representation_map.rs
ifc_rs/src/traits/: ifc_mapped_type.rs  ifc_type.rs  mod.rs  prelude.rs  relative_placement.rs  sub_types.rs
ifc_rs/src/units/: assignment.rs  conversion_based_unit.rs  derived_unit.rs  derived_unit_element.rs  dimensional_exponents.rs  measure_with_unit.rs  mod.rs  monetary_unit.rs  name.rs  prefix.rs  si_unit.rs  unit_enum.rs
ifc_rs/src/values/: bool.rs  core.rs  identifier.rs  label.rs  mod.rs  prelude.rs  real.rs  thermal_transmittance.rs
ifc_rs/tests/: insta.rs
ifc_rs/tests/common/: mod.rs
ifc_rs/tests/footer/: mod.rs
ifc_rs/tests/header/: mod.rs
ifc_rs/tests/snapshots/: insta__archicad_results.snap
ifc_rs_verify_derive/: Cargo.toml
ifc_rs_verify_derive/src/: inherited.rs  lib.rs
(+336 files in other folders)
