[workspace]
resolver = "2"

members = [
    "ifc_rs",
    "ifc_rs_verify_derive"
]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
downcast-rs = "1.2"
bevy_math = { version = "0.14", default-features = false }
ifc_rs_verify_derive = { version = "0.1.0-alpha.7", path = "./ifc_rs_verify_derive" }
itertools = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
syn = "2.0"
uuid = { version = "1.8", features = ["v4"] }
winnow = "0.6"

# dev
insta = { version = "1.39" }
regex = { version = "1.10" }
