[package]
name = "ifc_rs"
version = "0.1.0-alpha-rc1"
edition = "2021"
license = "MIT"
keywords = ["ifc", "standard", "buildings"]
authors = [
  "Michael Hübner <michael.hueber@metabuild.de>",
  "Gerasimos Kougianos <gerasimos.kougianos@metabuild.io>",
  "Robert Walter <robert.walter@metabuild.io>",
]
description = "A rust implementation of the IFC standard"
homepage = "https://github.com/MetabuildDev/ifc_rs"
repository = "https://github.com/MetabuildDev/ifc_rs"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
glam = "0.25"
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
winnow = "0.6"
destructure_traitobject = "0.3.0"
downcast-rs = "1.2.1"
ifc_rs_verify_derive = "0.1.0-alpha-rc1"
# ifc_rs_verify_derive = { path = "../ifc_rs_verify_derive" }
uuid = { version = "1.8", features = ["v4"] }
