[package]
name = "ifc_rs"
version = "0.1.0-alpha-rc2"
edition = "2021"
license = "MIT"
keywords = ["ifc", "standard", "buildings"]
authors = [
  "Michael Hübner <michael.hueber@metabuild.de>",
  "Gerasimos Kougianos <gerasimos.kougianos@metabuild.io>",
  "Robert Walter <robert.walter@metabuild.io>",
]
description = "A rust implementation of the IFC standard"
homepage = "https://github.com/MetabuildDev/ifc_rs"
repository = "https://github.com/MetabuildDev/ifc_rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
downcast-rs.workspace = true
glam.workspace = true
ifc_rs_verify_derive.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
uuid.workspace = true
winnow.workspace = true
