[package]
name = "ifc_rs"
version = "0.1.0-alpha.8"
edition = "2021"
license = "MIT"
keywords = ["ifc", "standard", "buildings"]
authors = [
  "Michael Hübner <michael.hueber@metabuild.de>",
  "Gerasimos Kougianos <gerasimos.kougianos@metabuild.io>",
  "Robert Walter <robert.walter@metabuild.io>",
]
description = "A rust implementation of the IFC standard"
homepage = "https://github.com/MetabuildDev/ifc_rs"
repository = "https://github.com/MetabuildDev/ifc_rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
downcast-rs.workspace = true
bevy_math.workspace = true
ifc_rs_verify_derive.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
uuid.workspace = true
winnow.workspace = true

[dev-dependencies]
insta.workspace = true
regex.workspace = true

[profile.dev.package]
insta.opt-level = 3 
similar.opt-level = 3
